--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "adm-zip": "^0.5.9",
+    "decompress": "^4.2.1",
     "iconv-lite": "^0.6.3",
     "n-readlines": "^1.0.1",
+    "node-7z-archive": "^1.1.2",
     "utf8": "^3.0.0"
   }
 }
